--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -1,5 +1,8 @@
 .slider {
     margin: auto;
-    padding:120px;
-    
+    padding:0 120px 0 120px ;
+    margin: 50px 0 30px 0;
+    display: flex;
+    justify-content: center;    
 }
+
