--- a/src/Pages/Home/CompanyName/CompanyName.css
+++ b/src/Pages/Home/CompanyName/CompanyName.css
@@ -24,7 +24,7 @@
   
 }
 
-@media (max-width: 700px) {
+@media only screen and (max-width: 700px) {
 
     .company > .name {
         display: flex;
